Fixed generated keys bug with primitives